--- a/work.html
+++ b/work.html
@@ -93,6 +93,28 @@
         <div class="relative bg-dark pb-16 pt-12 lg:pb-32">
             <div class="mx-auto max-w-7xl px-4 text-center">
                 <div class="grid grid-cols-1 gap-y-8 text-left lg:mt-16 lg:grid-cols-2 lg:gap-x-12 lg:gap-y-12">
+                    <!--Hemaya-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E2FFF1]">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS | Admin Dashboard & CMS <span class="ml-4 border-l pl-4"><img src="../assets/images/uae_flag.svg" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Designing Hemaya: A Safety & Wellbeing Platform for Students, Families, and Dubai Police</h3>
+                            </div>
+                            <img src="assets/images/hemaya-shot.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/hemaya" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+
+                        <div class="absolute bottom-8 left-0 bg-primary px-8 py-4">
+                            <h3 class="text-3xl">100%</h3>
+                            <p>Developer-Ready Handoff</p>
+                        </div>
+                    </div>
+
                     <!--Insellerate-->
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
@@ -186,7 +208,7 @@
                         </div>
                     </div>
 
-                    <!--Hydro Steam Northwest-->
+                    <!--Hydro Steam Northwest
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
@@ -201,7 +223,7 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div>-->
 
                     <!--Amooma
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
@@ -387,6 +409,9 @@
                 <div class="mx-auto text-center">
                     <p class="mb-8 uppercase tracking-widest">COMPANIES WHO TRUSTED ME WITH THEIR PROJECT</p>
                     <div class="mx-auto grid grid-cols-3 items-center justify-center opacity-75 lg:grid-cols-6">
+                        <div><img src="assets/images/logo-dubaipolice.svg" alt="" class="mr-4 h-24 w-full" /></div>
+                        <div><img src="assets/images/logo-hemaya.svg" alt="" class="mr-4 h-24 w-full" /></div>
+                        <div><img src="assets/images/logo-sbisiali.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-amooma.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-cliff.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-ins.svg" alt="" class="mr-4 h-24 w-full" /></div>
@@ -397,14 +422,14 @@
                         <div><img src="assets/images/logo-anydone.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-akg.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-treeleaf.svg" alt="" class="mr-4 h-24 w-full" /></div>
-                        <div><img src="assets/images/logo-jimbu.svg" alt="" class="mr-4 h-24 w-full" /></div>
+                        <!-- <div><img src="assets/images/logo-jimbu.svg" alt="" class="mr-4 h-24 w-full" /></div> -->
                         <div><img src="assets/images/logo-hs.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-athina.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-st.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-clickagee.svg" alt="" class="mr-4 h-24 w-full" /></div>
                         <div><img src="assets/images/logo-webbed.svg" alt="" class="mr-4 h-24 w-full" /></div>
-                        <div><img src="assets/images/logo-mydf.svg" alt="" class="mr-4 h-24 w-full" /></div>
-                        <div><img src="assets/images/logo-tbcs.svg" alt="" class="mr-4 h-24 w-full" /></div>
+                        <!-- <div><img src="assets/images/logo-mydf.svg" alt="" class="mr-4 h-24 w-full" /></div> -->
+                        <!-- <div><img src="assets/images/logo-tbcs.svg" alt="" class="mr-4 h-24 w-full" /></div> -->
                     </div>
                 </div>
             </div>
